Feat: 더 많은 예시 추가

--- a/sandbox/main.ipynb
+++ b/sandbox/main.ipynb
@@ -2,41 +2,78 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UserWarning: Specified provider 'CUDAExecutionProvider' is not in available provider names.Available providers: 'CPUExecutionProvider'\n",
-      "UserWarning: Specified provider 'OpenVINOExecutionProvider' is not in available provider names.Available providers: 'CPUExecutionProvider'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "IMAGE SIZE:  width=1920 height=1080\n",
-      "PREDICTIONS LEN:  25\n",
-      "PREDICTIONS FIRST:  x=1502.0 y=555.0 width=84.0 height=172.0 confidence=0.8134546279907227 class_name='person' class_confidence=None class_id=0 tracker_id=None detection_id='95782c57-b423-4dcd-91c2-fb003d6b2abe' parent_id=None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import cv2\n",
+    "import supervision as sv\n",
     "from inference import get_model\n",
-    "\n",
-    "model = get_model(model_id=\"yolov8n-640\")\n",
-    "results = model.infer(\"https://media.roboflow.com/inference/people-walking.jpg\")\n",
-    "\n",
-    "print(\"IMAGE SIZE: \", results[0].image)\n",
-    "print(\"PREDICTIONS LEN: \", len(results[0].predictions))\n",
-    "print(\"PREDICTIONS FIRST: \", results[0].predictions[0])"
+    "from PIL import Image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def showNumpyImage(image):\n",
+    "    rgb_image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "    pil_image = Image.fromarray(rgb_image)\n",
+    "    pil_image.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 객체를 인식하고, 사각형 박스 형태로 인식된 객체에 대한 라벨을 붙이는 예시\n",
+    "model = get_model(model_id=\"yolov10n-640\")\n",
+    "image = cv2.imread(\"./rawDatas/people-walking-2.webp\")\n",
+    "results = model.infer(image)[0]\n",
+    "\n",
+    "detections = sv.Detections.from_inference(results)\n",
+    "annotated_image = sv.BoundingBoxAnnotator().annotate(\n",
+    "    scene=image, detections=detections)\n",
+    "\n",
+    "labels = [\n",
+    "    f\"{class_name} {confidence:.2f}\"\n",
+    "    for class_name, confidence\n",
+    "    in zip(detections['class_name'], detections.confidence)\n",
+    "]\n",
+    "annotated_image = sv.LabelAnnotator().annotate(\n",
+    "    scene=annotated_image, detections=detections, labels=labels)\n",
+    "\n",
+    "showNumpyImage(annotated_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 객체를 인식하고, Segnantation 형태로 인식된 객체에 대한 라벨을 붙이는 예시\n",
+    "model = get_model(model_id=\"yolov8n-seg-640\")\n",
+    "image = cv2.imread(\"./rawDatas/people-walking-2.webp\")\n",
+    "results = model.infer(image)[0]\n",
+    "\n",
+    "detections = sv.Detections.from_inference(results)\n",
+    "annotated_image = sv.MaskAnnotator().annotate(\n",
+    "    scene=image, detections=detections)\n",
+    "\n",
+    "annotated_image = sv.LabelAnnotator().annotate(\n",
+    "    scene=annotated_image, detections=detections, labels=labels)\n",
+    "\n",
+    "showNumpyImage(annotated_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -46,31 +83,18 @@
       "UserWarning: Specified provider 'CUDAExecutionProvider' is not in available provider names.Available providers: 'CPUExecutionProvider'\n",
       "UserWarning: Specified provider 'OpenVINOExecutionProvider' is not in available provider names.Available providers: 'CPUExecutionProvider'\n"
      ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
     }
    ],
    "source": [
-    "from inference import InferencePipeline\n",
-    "from inference.core.interfaces.stream.sinks import render_boxes\n",
+    "# 비디오 객체 탐지 관련 정보를 CSV로 저장시키기\n",
+    "model = get_model(model_id=\"yolov10n-640\")\n",
+    "frames_generator = sv.get_video_frames_generator(\"./rawDatas/people-walking.mp4\")\n",
     "\n",
-    "pipeline = InferencePipeline.init(\n",
-    "    model_id=\"yolov8n-640\",\n",
-    "    video_reference=\"https://media.roboflow.com/inference/people-walking.mp4\",\n",
-    "    on_prediction=render_boxes\n",
-    ")\n",
-    "\n",
-    "pipeline.start()\n",
-    "pipeline.join()"
+    "with sv.CSVSink(\"./outputs/detections.csv\") as sink:\n",
+    "    for frame in frames_generator:\n",
+    "        results = model.infer(frame)[0]\n",
+    "        detections = sv.Detections.from_inference(results)\n",
+    "        sink.append(detections, {})"
    ]
   }
  ],
